08-APR-2025
- /removegame is now case insensitive

04-APR-2025
- JobQueue fixed

20-Mar-2025
- /scoreboard command re-added

20-MAR-2025
- Accidentally deleted a bunch of commits, lost a lot of code
- Retrieved most from a backup
-- Added a Job Queue to deal with multiple single posts, and simultaneous different posts
- Need to re-add:
-- Change summary formatting:
--- Group and sort by player name, then game name
-- Add /scoreboard command
--- Displays everything in monospace `text` and shows game, player, turn, timestamp; sorted by game

09-DEC-2024
- Created a new Startup routine
-- Polls the lst summary message, and the last 100 update posts and rebuilds the summary
- Rebuilt the message fetching routine to handle "things" better
- Standardized the console messages to better show program flow
- Added a "*" indicator in the summary to show the last game to be updated
-- Also shows "Server Rebooted" if the summary post is new because the server restarted

17-DEC-2024
- Created ChangeLog.txt
- Created Current Known Issues.txt