@@ -1,3 +1,7 @@
+25-APR-2025
+- The summary post is now in the following format:
+  (Grouped, Sorted) Player - (Sorted) Game - turn
+
 08-APR-2025
 - /removegame is now case insensitive
 
